[package]
name = "rust_wheel"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Jiangxiaoqiang <jiangtingqiang@gmail.com>"]
description = "A project to define some public component."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.2", features = ["json"] }

#
# https://github.com/GREsau/okapi/issues/96
# Fortune doc configuration
#
okapi = { git = "https://github.com/GREsau/okapi.git"}
schemars = "0.7"
rocket_okapi = { git = "https://github.com/GREsau/okapi.git", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
config = "0.11"
diesel = { version = "2.0.4", features = ["postgres"] }
chrono = "0.4"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
num-traits = "0.2"
ring = "0.16.20"
md5 = "0.7.0"
data-encoding = "2.3.2"
reqwest = { version = "0.11", features = ["json"] }
redis = "0.21.3"
mobc = "0.8.1"
thiserror = "1.0"
jsonwebtoken = "8.3.0"
base64 = "0.4.0"

[features]
default = ["config", "model", "common"]
config = []
model = []
common = []
full = [
    "config",
    "model",
    "common",
]