[package]
name = "rust_wheel"
version = "0.1.3"
edition = "2018"
license = "MIT"
authors = ["Jiangxiaoqiang <jiangtingqiang@gmail.com>"]
description = "A project to define some public component."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }

#
# https://github.com/GREsau/okapi/issues/96
# Fortune doc configuration
#
# okapi = { git = "https://github.com/GREsau/okapi.git", version="0.8.0-rc.1"}
schemars = "0.7"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"]}
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
config = "0.11"
diesel = { version = "2.0.4", features = ["postgres"] }
chrono = "0.4"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
num-traits = "0.2"
ring = "0.16.20"
md5 = "0.7.0"
gostd = "^0.3"
sha2 = "0.10.2"
rsa = "0.6.1"
data-encoding = "2.3.2"
reqwest = { version = "0.11", features = ["json"] }
redis = "0.23.3"
mobc = "0.8.1"
thiserror = "1.0"
jsonwebtoken = "8.3.0"
base64 = "0.4.0"
actix-web = "4"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
uuid = {version = "1.4.1",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
urlencoding = "2.1.3"
form_urlencoded = "1.2.1"

[features]
default = ["rwconfig", "model", "common", "texhub", "cruise", "alipay"]
rwconfig = []
model = []
common = []
texhub = []
cruise = []
alipay = []
full = [
    "rwconfig",
    "model",
    "common",
    "texhub"
]